# LConf Changelog

NOTE: Please read doc/upgrading.md for detailed information on changes and
upgrade information!

## 1.5.0 - XX/YY/2015

### CHANGES

* #424: Add icon_image and icon_image_alt to ldap schema
* #2680: Rewritten TreeBuilder export

### FEATURES

### FIXES

## 1.5.0 Beta2 - 10/02/2015

### FIXES

* Bug #2823: Type of arg 1 to keys must be hash


## 1.5.0 Beta1 - 19/12/2014

### CHANGES

* #2680: Rewritten TreeBuilder export


## 1.4.3 - 19/12/2014

### CHANGES

* Bug #2777: Add support for Icinga2 2.2
* Bug #2678: Hostgroupmembers property of hostgroup objects are not exported
* Bug #2664: icinga2: multiple service contacts generate duplicate notification objects
* Feature #2773: Add doc/export.md explaining the 2.x migration differences in detail
* Feature #2783: icinga2: export should trim whitespaces in interval values
* Feature #2789: icinga 2: Add default enable_* attribute to generic-* templates in default-templates.conf

### FIXES

* Bug #2499: Export ignores ou containing !
* Bug #2663: icinga2: Wrong State filter for Hosts generated
* Bug #2664: icinga2: multiple service contacts generate duplicate notification objects
* Bug #2668: Icinga 2: Notifications are not generated if contact notification command is missing
* Bug #2670: icinga2: Additive groups without parent cause empty group array entry
* Bug #2678: Hostgroupmembers property of hostgroup objects are not exported
* Bug #2702: icinga2: enable_active_checks isn't exported
* Bug #2708: Icinga2: processperfdata is not exported
* Bug #2748: Icinga2: Contact members of contactgroups are not exported
* Bug #2750: Icinga2: Host & ServiceCheckPeriod, Host & ServiceNotificationPeriod, Host & ServiceNotificationInterval don't get exported
* Bug #2759: Icinga2: lconfhostcontacts notification filter wrong
* Bug #2763: icinga2: "+Hostgroupname" without parent group attribute generates empty Hostgroup
* Bug #2765: Icinga2: lconfhostnotificationoptions do not work